src/test/resources/private/typechecking/pass/this/this_05_return_class.jova
class Test{
    public int testing (Test t) {
        return 0;
    }

    public int test(int x) {
        return this.testing(this);
    }
}