src/test/resources/private/typechecking/fail/unknown/fail05_unknownClassAsReturnValue.jova
class Test {
    public Unknown func() {

        return nix;
    }
}